--- a/src/styles/starIcon.module.css
+++ b/src/styles/starIcon.module.css
@@ -21,7 +21,10 @@
   font-size: 0.8rem;
   text-align: center;
   color: white;
+  background-color: black;
   opacity: 0;
+  padding: 10px;
+  border-radius: 2rem;
   transition: opacity 0.3s ease;
 }
 
