--- a/src/styles/modal.module.css
+++ b/src/styles/modal.module.css
@@ -2,8 +2,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100rem;
+  height: 100rem;
   background: rgba(0, 0, 0, 0.6);
   display: flex;
   align-items: center;
@@ -16,8 +16,33 @@
   padding: 20px;
   border-radius: 10px;
   max-width: 500px;
-  width: 90%;
+  width: 70%;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   position: relative;
   color: black;
+}
+
+/* Estilos para el contenedor inline de About Me */
+.inline-aboutme {
+  background: rgba(0, 0, 0, 0.6);
+  opacity: 100;
+  padding: 20px;
+  border-radius: 10px;
+  max-width: 800px;
+  width: 90%;
+  margin: 20px auto;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
+  position: relative;
+  color: whitesmoke;
+  z-index: 10;
+}
+
+.inline-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 18px;
+  cursor: pointer;
 }
