--- a/src/styles/text.module.css
+++ b/src/styles/text.module.css
@@ -29,7 +29,7 @@
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
   position: relative;
   color: black;
-  z-index: 10; /* This ensures the inline content appears above the text overlay */
+  /* This ensures the inline content appears above the text overlay */
 }
 
 .inline-close-btn {
