--- a/src/styles/aboutMe.module.css
+++ b/src/styles/aboutMe.module.css
@@ -1,26 +1,20 @@
 .aboutMeSection {
-  padding: 40px;
-  background: rgba(0, 0, 0, 0.7); /* Fondo oscuro translúcido */
+  padding: 50px 20px;
+  background: rgba(0, 0, 0, 0.7);
   border-radius: 15px;
   backdrop-filter: blur(10px);
-  color: white;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 .aboutMeTitle {
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 20px;
-  text-shadow: 0px 0px 10px rgba(255, 255, 255, 0.8);
 }
 
 .contentLeft {
   max-width: 600px;
-  margin-bottom: 20px;
-  text-align: center;
+  margin: 20px auto;
 }
 
 .contentRight {
@@ -35,15 +29,7 @@
   padding: 20px;
   border-radius: 10px;
   width: 45%;
-  min-width: 300px;
-  backdrop-filter: blur(5px);
-}
-
-.sectionTitle {
-  font-size: 1.75rem;
-  font-weight: 600;
-  margin-bottom: 16px;
-  text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.7);
+  min-width: 250px;
 }
 
 .iconGrid {
@@ -67,4 +53,19 @@
 .iconItem span {
   margin-top: 8px;
   font-size: 1rem;
+}
+
+/* Mobile adjustments */
+@media (max-width: 768px) {
+  .aboutMeTitle {
+    font-size: 2rem;
+  }
+
+  .contentLeft {
+    max-width: 100%;
+  }
+
+  .sectionBox {
+    width: 100%;
+  }
 }
